--- a/PREMIERE PARTIE/Makefile
+++ b/PREMIERE PARTIE/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fave_r@epitech.net>
 ##
 ## Started on  Fri Feb 28 20:51:16 2014 romaric
-## Last update Fri Feb 28 21:18:42 2014 romaric
+## Last update Sat Mar  1 09:30:15 2014 romaric
 ##
 
 CC=		clang
@@ -14,7 +14,7 @@ RM=		rm -f
 
 CFLAGS=		-Wextra -Wall -Werror -ggdb3 -g3
 
-NAME=		Sudoki-Bi
+NAME=		sudoki-bi
 
 SRCS=		char.c \
 		xfunction.c \
