test backtracking (don't work)

--- a/PREMIERE PARTIE/Makefile
+++ b/PREMIERE PARTIE/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fave_r@epitech.net>
 ##
 ## Started on  Fri Feb 28 20:51:16 2014 romaric
-## Last update Sat Mar  1 14:17:53 2014 romaric
+## Last update Sat Mar  1 14:48:51 2014 romaric
 ##
 
 CC=		clang
@@ -17,14 +17,17 @@ CFLAGS=		-Wextra -Wall -Werror -ggdb3 -g3
 NAME=		sudoki-bi
 
 SRCS=		xfunction.c \
-		main.c
+		main.c \
+		doble.c \
+		calc.c \
+		aux.c
 
 OBJS=		$(SRCS:.c=.o)
 
 all:		$(NAME)
 
 $(NAME):	$(OBJS)
-		$(CC) $(OBJS) -o $(NAME) $(LDFLAGS)
+		$(CC) $(OBJS) -o $(NAME) $(LDFLAGS) -lm
 
 clean:
 		$(RM) $(OBJS)
