--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -1,16 +1,16 @@
 ##
 ## Makefile for Makefile in /home/alex-odet/work/Test_SDL
-## 
+##
 ## Made by Alexandre Odet
 ## Login   <alex-odet@epitech.net>
-## 
+##
 ## Started on  Sat Mar  1 14:41:33 2014 Alexandre Odet
-## Last update Sat Mar  1 14:44:10 2014 Alexandre Odet
+## Last update Sat Mar  1 18:57:34 2014 romaric
 ##
 
 NAME=	SDL_TEST
 
-CC=	gcc
+CC=	clang
 
 SRC=	*.c
 
