Epur_str qui défonce ta mère

--- a/PREMIERE PARTIE/Makefile
+++ b/PREMIERE PARTIE/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fave_r@epitech.net>
 ##
 ## Started on  Fri Feb 28 20:51:16 2014 romaric
-## Last update Sat Mar  1 18:53:12 2014 Alexandre Odet
+## Last update Sat Mar  1 23:16:43 2014 Alexandre Odet
 ##
 
 CC=		clang
@@ -19,7 +19,8 @@ NAME=		sudoki-bi
 SRCS=		xfunction.c \
 		main.c \
 		calc.c \
-		aux.c
+		aux.c \
+		epur_str.c
 
 OBJS=		$(SRCS:.c=.o)
 
