"Remplissage tableaux d'int"

--- a/PREMIERE PARTIE/Makefile
+++ b/PREMIERE PARTIE/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fave_r@epitech.net>
 ##
 ## Started on  Fri Feb 28 20:51:16 2014 romaric
-## Last update Sun Mar  2 01:46:19 2014 romaric
+## Last update Sun Mar  2 02:38:25 2014 Alexandre Odet
 ##
 
 CC=		clang
@@ -19,8 +19,8 @@ NAME=		sudoki-bi
 SRCS=		xfunction.c \
 		main.c \
 		aux.c \
-		epur_str.c \
-		test.c
+		calc.c \
+		epur_str.c
 
 OBJS=		$(SRCS:.c=.o)
 
