--- a/PREMIERE PARTIE/dobleint/Makefile
+++ b/PREMIERE PARTIE/dobleint/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fave_r@epitech.net>
 ##
 ## Started on  Fri Feb 28 20:51:16 2014 romaric
-## Last update Sun Mar  2 12:58:07 2014 romaric
+## Last update Sun Mar  2 16:59:00 2014 romaric
 ##
 
 CC=		clang
@@ -19,7 +19,8 @@ NAME=		sudoki-bi
 SRCS=		xfunction.c \
 		main.c \
 		test.c \
-		epur_str.c
+		doble.c \
+		auxcalc.c
 
 OBJS=		$(SRCS:.c=.o)
 
