--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -5,21 +5,21 @@
 ## Login   <alex-odet@epitech.net>
 ##
 ## Started on  Sat Mar  1 14:41:33 2014 Alexandre Odet
-## Last update Sat Mar  1 18:57:34 2014 romaric
+## Last update Sun Mar  2 21:08:44 2014 Alexandre Odet
 ##
 
 NAME=	SDL_TEST
 
 CC=	clang
 
-SRC=	*.c
+SRC=	main.c
 
 T=	*~
 
 RM=	rm -f
 
 all:
-	$(CC) -o $(NAME) $(SRC) -lSDL
+	$(CC) -o $(NAME) $(SRC) -lSDL -lGL -lGLU
 
 clean:
 	$(RM) $(T)
